--- a/gce/prepull-1.16.yaml
+++ b/gce/prepull-1.16.yaml
@@ -1,7 +1,24 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: prepull
+---
+apiVersion: v1
+kind: LimitRange
+metadata:
+  name: prepull-limit-range
+  namespace: prepull
+spec:
+  limits:
+  - type: Container
+    defaultRequest:
+      cpu: 1m
+---
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  name: prepull
+  name: prepull-test-containers
+  namespace: prepull
 spec:
   selector:
     matchLabels:
@@ -13,21 +30,23 @@ spec:
     spec:
       nodeSelector:
         kubernetes.io/os: windows
-      initContainers:
+      restartPolicy: Never
+      # To generate this list from the build-log.txt output of an e2e test
+      # result:
+      #   grep -o -E 'e2eteam/([[:alnum:]_-]+):([[:alnum:]./_-]+)' \
+      #   build-log.txt | sort | uniq
+      containers:
+      - image: e2eteam/agnhost:2.6
+        name: agnhost-2.6
+        command: ["cmd", "exit"]
       - image: e2eteam/busybox:1.29
         name: busybox1
         command: ["cmd", "exit"]
-      - image: e2eteam/curl:1803
-        name: curl2
-        command: ["cmd", "exit"]
-      - image: e2eteam/java:openjdk-8-jre
-        name: java3
-        command: ["cmd", "exit"]
-      - image: e2eteam/test-webserver:1.0
-        name: test-webserver4
-        command: ["cmd", "exit"]
       - image: e2eteam/cassandra:v13
         name: cassandra5
+        command: ["cmd", "exit"]
+      - image: e2eteam/curl:1803
+        name: curl2
         command: ["cmd", "exit"]
       - image: e2eteam/dnsutils:1.1
         name: dnsutils6
@@ -38,10 +57,10 @@ spec:
       - image: e2eteam/entrypoint-tester:1.0
         name: entrypoint-tester8
         command: ["cmd", "exit"]
-      - image: e2eteam/etcd:v3.3.10
+      - image: e2eteam/etcd:3.3.10
         name: etcd9
         command: ["cmd", "exit"]
-      - image: e2eteam/etcd:3.3.10
+      - image: e2eteam/etcd:v3.3.10
         name: etcd10
         command: ["cmd", "exit"]
       - image: e2eteam/fakegitserver:1.0
@@ -59,8 +78,17 @@ spec:
       - image: e2eteam/hostexec:1.1
         name: hostexec15
         command: ["cmd", "exit"]
+      - image: e2eteam/httpd:2.4.38-alpine
+        name: httpd-2.4.38
+        command: ["cmd", "exit"]
+      - image: e2eteam/httpd:2.4.39-alpine
+        name: httpd-2.4.39
+        command: ["cmd", "exit"]
       - image: e2eteam/iperf:1.0
         name: iperf16
+        command: ["cmd", "exit"]
+      - image: e2eteam/java:openjdk-8-jre
+        name: java-openjdk-8
         command: ["cmd", "exit"]
       - image: e2eteam/jessie-dnsutils:1.0
         name: jessie-dnsutils17
@@ -72,7 +100,7 @@ spec:
         name: liveness19
         command: ["cmd", "exit"]
       - image: e2eteam/logs-generator:1.0
-        name: logs-generator20
+        name: logs-generator-1.0
         command: ["cmd", "exit"]
       - image: e2eteam/mounttest:1.0
         name: mounttest21
@@ -80,57 +108,17 @@ spec:
       - image: e2eteam/nautilus:1.0
         name: nautilus22
         command: ["cmd", "exit"]
-      - image: e2eteam/net:1.0
-        name: net23
-        command: ["cmd", "exit"]
-      - image: e2eteam/netexec:1.1
-        name: netexec24
-        command: ["cmd", "exit"]
-      - image: e2eteam/nettest:1.0
-        name: nettest25
-        command: ["cmd", "exit"]
       - image: e2eteam/nginx:1.14-alpine
         name: nginx26
         command: ["cmd", "exit"]
-      - image: e2eteam/nginx:1.15-alpine
-        name: nginx27
-        command: ["cmd", "exit"]
-      - image: e2eteam/no-snat-test:1.0
-        name: no-snat-test28
-        command: ["cmd", "exit"]
       - image: e2eteam/pause:3.1
-        name: pause29
+        name: pause-3.1
         command: ["cmd", "exit"]
-      - image: e2eteam/port-forward-tester:1.0
-        name: port-forward-tester30
+      - image: e2eteam/redis:5.0.5-alpine
+        name: redis-5.0.5
         command: ["cmd", "exit"]
-      - image: e2eteam/porter:1.0
-        name: porter31
+      - image: e2eteam/test-webserver:1.0
+        name: test-webserver4
         command: ["cmd", "exit"]
-      - image: e2eteam/redis:1.0
-        name: redis32
-        command: ["cmd", "exit"]
-      - image: e2eteam/resource-consumer:1.4
-        name: resource-consumer33-1
-        command: ["cmd", "exit"]
-      - image: e2eteam/resource-consumer:1.5
-        name: resource-consumer33-2
-        command: ["cmd", "exit"]
-      - image: e2eteam/resource-consumer-controller:1.0
-        name: resource-consumer-controller34
-        command: ["cmd", "exit"]
-      - image: e2eteam/rethinkdb:1.16.0_1
-        name: rethinkdb35
-        command: ["cmd", "exit"]
-      - image: e2eteam/sample-apiserver:1.10
-        name: sample-apiserver36
-        command: ["cmd", "exit"]
-      - image: e2eteam/serve-hostname:1.1
-        name: serve-hostname37
-        command: ["cmd", "exit"]
-      - image: e2eteam/webhook:1.13v1
-        name: webhook38
-        command: ["cmd", "exit"]
-      containers:
       - image: mcr.microsoft.com/k8s/core/pause:1.0.0
         name: pause
